# anon-messaging

./: .gitignore  render.yaml
.github/workflows/: client.yml  main.yaml
client/: .gitignore  README.md  api.json  openapi-ts.config.ts  package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js  tailwind.config.js  tsconfig.json
client/public/: global.css  index.html
client/scripts/: generate-sprites.ts  migrate.ts
client/src/: App.svelte  app.css  app.html  routes.js
client/src/components/: Advantages.svelte  Footer.svelte  FormCard.svelte  IntroSection.svelte  Navbar.svelte
client/src/lib/: index.ts
client/src/lib/components/: Icon.svelte  IdentityCreatedSuccess.svelte  IdentityCreatedSuccess.svelte.spec.ts  IdentityModal.svelte  IdentityModal.svelte.spec.ts
client/src/lib/requests/: sdk.gen.ts  types.gen.ts
client/src/lib/requests/@tanstack/: svelte-query.gen.ts
client/src/lib/server/: client.ts  decrypt-message.spec.ts  decrypt-message.ts  encrypt-message.spec.ts  encrypt-message.ts  sign-verify.spec.ts  sign-verify.ts
client/src/lib/server/db/: db-types.ts  db.ts  index.ts
client/src/lib/server/db/migrations/: 00001.ts
client/src/lib/server/db/repository/: anon-mappings.repository.spec.ts  anon-mappings.repository.ts  index.ts  user.repository.spec.ts  user.repository.ts
client/src/lib/server/forward/: create-user.ts
client/src/lib/server/requests/: client.gen.ts  client.ts  sdk.gen.ts  types.gen.ts  zod.gen.ts
client/src/lib/server/requests/@tanstack/: svelte-query.gen.ts
client/src/lib/stores/: theme.ts
client/src/lib/types/: icon.ts
client/src/lib/utils/: base64-to-url-safe.spec.ts  base64-to-url-safe.ts  key-encrypt.spec.ts  key-encrypt.ts  rsa-keygen.spec.ts  rsa-keygen.ts  rsa-keystore.spec.ts  rsa-keystore.ts
client/src/pages/: Home.svelte  Login.svelte  PrivacyPolicy.svelte  Register.svelte
client/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  page.svelte.spec.ts  page.svelte.test.tsg
client/src/routes/about/: +page.svelte
client/src/routes/contact/: +page.svelte
client/src/routes/messages/: +page.server.ts  +page.svelte
client/src/routes/privacy-policy/: +page.svelte  +page.ts
client/src/routes/terms/: +page.svelte  +page.ts
client/src/services/: user.service.js
client/src/util/: advantages.js
client/src/views/: Form.view.svelte  Main.view.svelte
microservice/: .gitignore  Cargo.toml  render.yaml
microservice/api/: Cargo.toml  usage.txt
microservice/api/src/: key_generation.rs  key_generation.test.rs  lib.rs  message.rs  token.rs  user.rs
microservice/api/tests/: message_api_service_integration.rs  token_api_service_integration.rs  user_api_service_integration.rs  user_e2e.rs
microservice/api/tests/common/: mod.rs
microservice/binary/: Cargo.toml
microservice/binary/src/: main.rs
microservice/circuits/: Cargo.toml
microservice/circuits/src/: lib.rs  message_preparation.rs  message_preparation.test.rs  message_protocol.rs  message_reception.rs
microservice/db/: .gitignore  Cargo.toml  anonymous_messaging.db  anonymous_messaging.db-shm  anonymous_messaging.db-wal
microservice/db/migrations/: 20250209024150_initial_schema.sql  20250209232021_initial_schema.sql  20250212231155_next_schema.sql  20250212234204_next_schema.sql  20250304094040_message_schema.sql  20250304094252_updated_user.sql  20250414121832_refresh_tokens.sql  20250414122054_revoked_tokens.sql  20250415114815_create_users.sql  20250516233258_anon_mapping.sql
microservice/db/src/: db.rs  db.test.rs  db.test.rs.save  db_trait.rs  hyphenated_uuid.rs  lib.rs  message_db.rs  models.rs  public_key.rs  public_key_hash.rs  setup.rs  token_db.rs  unix_timestamp.rs  user.rs  user_db.rs
microservice/scripts/: key-generation-test.sh
microservice/service/: Cargo.toml
microservice/service/src/: lib.rs
microservice/service/src/message/: mod.rs  repository.rs  service.rs  utils.rss
microservice/service/src/token/: repository.rs  service.rs
microservice/service/src/user/: mod.rs
microservice/shared/: Cargo.toml
microservice/shared/src/: data_encryption.rs  errors.rs  key_generation.rs  key_generation.test.rs  lib.rs  models.rs
microservice/shared/src/crypto/: constants.rs  types.rs  utils.rs
microservice/src/: main.rs
server/: .env.example  .mocharc.yaml  .prettierrc.js  build.ts  nodemon.json  package-lock.json  package.json  tsconfig.json  tsoa.json
server/src/: index.ts  routes.ts
server/src/api/controllers/example/: controller.ts
server/src/api/controllers/message/: controller.ts  router.ts
server/src/api/controllers/user/: controller.ts  router.ts
server/src/api/lib/: ChatUtil.ts  PasswordUtil.ts
server/src/api/middlewares/: error.handler.ts
server/src/api/models/: message.ts  user.ts
server/src/api/services/: example.service.ts  message.service.ts  service.ts  user.service.ts
server/src/common/: api.yml  database.ts  logger.ts  server.ts  socket-constants.ts
