[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
db = { version = "0.1.0", path = "../db" }
serde = "1.0.217"
serde_json = "1.0.138"
shared = { version = "0.1.0", path = "../shared" }
sqlx = "0.8.3"

[dev-dependencies]
actix-http = "3.9.0"
