[package]
name = "binary"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { version = "0.1.0", path = "../api" }
db = { version = "0.1.0", path = "../db" }
actix-web = "4.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
env_logger = "0.11.6"
service = { version = "0.1.0", path = "../service" }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
utoipauto = "0.2.0"
utoipa = "5.3.1"
