[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0" }
ark-ed-on-bls12-381 = { version = "^0.5.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.5.0" }
ark-std = { version = "^0.5.0", features = [ "std" ] }
ark-relations = { version = "^0.5.0" }
arkworks-utils = "^0.5.0" 
ark-r1cs-std = { version = "^0.5.0" }
ark-snark = { version = "^0.5.0", default-features = false }

ark-serialize = { version = "^0.5.0", default-features = false }

ark-crypto-primitives = { version = "^0.5.0", default-features = true, features = [ "r1cs", "crh", "commitment", "prf" ] }
ark-groth16 = { version = "^0.5.0" }
ark-ed-on-bn254 = "0.5.0"
rand = { version = "^0.8.5", features = [ "std", "std_rng" ] }
ark-ed25519 = "0.5.0"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
thiserror = "2.0.11"
blake2 = "0.10.6"
subtle = "2.6.1"
