[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
dotenv = "0.15.0"
faker_rand = "0.1.1"
rand = "0.9.1"
serde = "1.0.217"
serde_with = { version = "3.12.0", features = ["chrono_0_4"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["serde", "std", "v4", "v7"] }

[dev-dependencies]
serde_json = "1.0.138"
serial_test = "3.2.0"
sqlx-cli = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
