[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
dotenv = "0.15.0"
faker_rand = "0.1.1"
hex = "0.4.3"
rand = "0.8.5"
serde = "1.0.217"
serde_with = { version = "3.12.0", features = ["chrono_0_4"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
uuid = { version = "1.13.1", features = ["serde", "std", "v4", "v7"] }

[dev-dependencies]
futures = "0.3.31"
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde_json = "1.0.138"
serial_test = "3.2.0"
sha2 = "0.10.8"
sqlx-cli = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
