[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
db = { version = "0.1.0", path = "../db" }
mockall = "0.13.1"
p256 = "0.13.2"
rand = "0.8.5"
sha2 = "0.10.8"
shared = { version = "0.1.0", path = "../shared" }

[dev-dependencies]
chrono = "0.4.41"
futures = "0.3.31"
rstest = "0.25.0"
tokio = "1.44.2"
