[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = "0.13.2"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand_core = { version = "^0.6.0", features = ["std"] }
sha2 = "0.10.8"
db = { version = "0.1.0", path = "../db" }
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }

[dev-dependencies]
generic-array = "0.14"
