[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = "0.13.2"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand_core = { version = "^0.6.0", features = ["std"] }
sha2 = "0.10.8"
db = { version = "0.1.0", path = "../db" }
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
base64 = "0.22.1"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
actix-web = "4.10.2"
sqlx = "0.8.5"
utoipa = { version = "5.3.1", features = ["uuid"] }
jsonwebtoken = "9.3.1"

[dev-dependencies]
generic-array = "0.14"
